<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="160dp"
	android:background="#fff9f9f9"
    android:paddingTop="40dp" >
    
    <TableLayout 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <TableRow >
            <TextView 
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:text="@string/user_name"/>
            <TextView 
                android:layout_width="10dp"
                android:layout_height="wrap_content" />
            <EditText 
                android:id="@+id/login_edit1"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:background="@drawable/textview_border"
                android:paddingLeft="3dp"
                android:textSize="20sp"/>
        </TableRow>
        
        <TableRow android:paddingTop="20dp">
            <TextView
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:text="@string/user_password"/>
             <TextView 
                android:layout_width="10dp"
                android:layout_height="wrap_content" />
             <EditText 
                android:id="@+id/login_edit2"
                android:layout_width="80dp"
                android:background="@drawable/textview_border"
                android:layout_height="wrap_content"
                android:paddingLeft="3dp"
                android:textSize="20sp"/>
        </TableRow>
        
       
    	<TableRow android:paddingTop="30dp">
    	    <Button 
    	        android:id="@+id/login_button1"
    	        android:layout_width="40dp"
    	        android:layout_height="wrap_content"
    	        android:textSize="20sp"
    	        android:text="@string/login_button1"/>
    	     <TextView 
                android:layout_width="10dp"
                android:layout_height="wrap_content" />
    	    <Button
    	        android:id="@+id/login_button2" 
    	        android:layout_width="wrap_content"
    	        android:layout_height="wrap_content"
    	        android:textSize="20sp"
    	        android:text="@string/login_button2"/>
    	</TableRow>
    </TableLayout>
    
	
</LinearLayout>
